<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/titleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="28dp"
        android:text="Post a job"
        android:textSize="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jobPostStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Job Posted Successfully"
        android:visibility="invisible"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/jobTitleEditText"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/jobTitleEditText"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="143dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Job Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/jobLocationEditText"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="229dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/jobTypeDropDown"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="372dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/salaryEditText"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Salary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dropDownHeader"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="308dp"
        android:text="Choose job type:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/postJobButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Post Job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>