<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Signup_pg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="269dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="50dp"
        android:text="Wellcome to Quick Cash"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signupname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Your full name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signupemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Your email address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signupPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="New password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/creditNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:ems="10"
        android:hint="Credit Card Number"
        android:inputType="number" />

    <EditText
        android:id="@+id/PIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:ems="10"
        android:hint="PIN"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/seucrityCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Serurity code"
        android:layout_marginHorizontal="10dp"
        android:inputType="textPassword" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">


        <RadioButton
            android:id="@+id/employer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I am the Employer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:duplicateParentState="true"
            android:focusable="auto"
            android:text="I am the Employee"
            android:textSize="15sp"
            android:visibility="visible" />
    </RadioGroup>


    <Button
        android:id="@+id/signupFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/log_btn_dsgn"
        android:text="Get Start!"
        android:textColor="#ffffff" />
    <!--        android:onClick="btn_main"-->


    <Button
        android:id="@+id/btn_home"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120sp"
        android:layout_marginTop="1dp"
        android:text="Back"

        />


</LinearLayout>